--- a/default.conf
+++ b/default.conf
@@ -3,14 +3,14 @@ server {
     server_name  localhost;
 
     #charset koi8-r;
-    #access_log  /var/log/nginx/host.access.log  main;
+    access_log  /var/log/nginx/host.access.log  main;
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
 
-    #error_page  404              /404.html;
+    error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
     #
